[gd_scene load_steps=3 format=3 uid="uid://cmgpot6lnu7c2"]

[ext_resource type="Script" path="res://scenes/MenuLogic.gd" id="1_28ph3"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="4_ycirj"]

[node name="MenuLogic" type="Node2D"]
script = ExtResource("1_28ph3")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="FadeOverlay" parent="." instance=ExtResource("4_ycirj")]
unique_name_in_owner = true
visible = false
fade_in_duration = 0.5
fade_out_duration = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="on_complete_fade_out" from="FadeOverlay" to="." method="_on_fade_overlay_on_complete_fade_out"]
